--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   },
   "dependencies": {
     "apollo-boost": "^0.4.9",
+    "apollo-link-http-common": "^0.2.16",
     "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "cron": "^2.3.1",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "express": "^4.18.2",
     "graphql": "^15.8.0",
     "moment": "^2.29.4",
     "mongodb": "^5.5.0",
+    "mongoose": "^7.3.0",
+    "node-fetch": "^3.3.1",
     "web3": "^1.10.0"
   },
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "start:dev": "nodemon app.js"
   },
   "name": "query_subgraph_test",
   "version": "1.0.0",
@@ -22,5 +28,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.22"
+  }
 }
