--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "mongodb": "^5.5.0",
     "mongoose": "^7.3.0",
     "node-fetch": "^3.3.1",
+    "shuffle-array": "^1.0.1",
     "web3": "^1.10.0"
   },
   "scripts": {
     "start": "node app.js",
     "start:dev": "nodemon app.js"
   },
-  "name": "query_subgraph_test",
+  "name": "worker",
   "version": "1.0.0",
   "main": "app.js",
   "keywords": [],
